[gd_scene load_steps=3 format=3 uid="uid://qb5myi3utm73"]

[ext_resource type="Script" path="res://new_task.gd" id="1_8tl87"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sab8f"]
bg_color = Color(0.0431373, 0.0431373, 0.0431373, 1)

[node name="NewTask" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8tl87")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 674.0
grow_horizontal = 2
theme_override_constants/margin_left = 42
theme_override_constants/margin_top = 42
theme_override_constants/margin_right = 42
theme_override_constants/margin_bottom = 42

[node name="Pane" type="PanelContainer" parent="Margin"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sab8f")

[node name="Body" type="VBoxContainer" parent="Margin/Pane"]
clip_contents = true
layout_mode = 2

[node name="Head" type="PanelContainer" parent="Margin/Pane/Body"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/Pane/Body/Head"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_font_sizes/font_size = 100
text = "New Task"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CancelBtn" type="Button" parent="Margin/Pane/Body/Head"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 100
text = " X "

[node name="Title" type="LineEdit" parent="Margin/Pane/Body"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 60
placeholder_text = "Enter task..."
max_length = 32
caret_blink = true

[node name="Description" type="TextEdit" parent="Margin/Pane/Body"]
custom_minimum_size = Vector2(0, 420)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
placeholder_text = "Detail your task with a discription..."
scroll_smooth = true
caret_blink = true

[node name="AddTaskBtn" type="Button" parent="Margin/Pane/Body"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 80
text = "Add Task"

[connection signal="pressed" from="Margin/Pane/Body/Head/CancelBtn" to="." method="_on_cancel_btn_pressed"]
[connection signal="text_submitted" from="Margin/Pane/Body/Title" to="." method="_on_title_text_submitted"]
[connection signal="pressed" from="Margin/Pane/Body/AddTaskBtn" to="." method="_on_AddTaskBtn_pressed"]
